gccida/g2/calls_function_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:723:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v3; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:729:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:778:19: error: expected expression
v9 = ( tree_node *)i[13]; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/calls.c:778:8: error: use of undeclared identifier 'tree_node'
v9 = ( tree_node *)i[13]; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/calls_function_1/src/obj/calls.o] Error 1
